--- a/front-envoy/envoy.yaml
+++ b/front-envoy/envoy.yaml
@@ -1,3 +1,5 @@
+node:
+  cluster: front-envoy
 admin:
   access_log_path: "/tmp/admin_access.log"
   address:
@@ -16,31 +18,83 @@ static_resources:
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
           access_log:
-          - name: envoy.access_loggers.stdout
+          - name: envoy.access_loggers.file
             typed_config:
-              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
+              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+              path: "/dev/stdout"
+              log_format:
+              ## This is an example for an access log format, when the time comes we will need to think about when we want to log and what to log
+              typed_json_format: 
+                "@timestamp": "%START_TIME%"
+                client:
+                  address: "%DOWNSTREAM_REMOTE_ADDRESS%"
+                  direct:
+                    remote:
+                      address: "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS%"
+                  local:
+                    address: "%DOWNSTREAM_LOCAL_ADDRESS%"
+                  remote:
+                    address_no_port: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
+                envoy:
+                  route:
+                    name: "%ROUTE_NAME%"
+                  upstream:
+                    cluster: "%UPSTREAM_CLUSTER%"
+                    localaddress: "%UPSTREAM_LOCAL_ADDRESS%"
+                    transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
+                host:
+                  hostname: "%HOSTNAME%"
+                http:
+                  request:
+                    body:
+                      bytes: "%BYTES_RECEIVED%"
+                    headers:
+                      accept: "%REQ(ACCEPT)%"
+                      authority: "%REQ(:AUTHORITY)%"
+                      content-length: "%REQ(CONTENT-LENGTH)%"
+                      content-type: "%REQ(CONTENT-TYPE)%"
+                      host: "%REQ(HOST)%"
+                      id: "%REQ(X-REQUEST-ID)%"
+                      session-id: "%REQ(SESSION-ID)%"
+                      correlation-id: "%REQ(CORRELATION-ID)%"
+                      x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
+                      x_forwarded_proto: "%REQ(X-FORWARDED-PROTO)%"
+                      x_envoy_internal: "%REQ(X-ENVOY-INTERNAL)%"
+                      x_envoy_decorator_operation: "%REQ(X-ENVOY-DECORATOR-OPERATION)%"
+                      x_envoy_expected_rq_timeout_ms: "%REQ(X-ENVOY-EXPECTED-RQ-TIMEOUT-MS)%"
+                      x_b3_traceid: "%REQ(X-B3-TRACEID)%"
+                      x_b3_parentspanid: "%REQ(X-B3-PARENTSPANID)%"
+                      x_b3_spanid: "%REQ(X-B3-SPANID)%"
+                      x_b3_sampled: "%REQ(X-B3-SAMPLED)%"
+                    method: "%REQ(:METHOD)%"
+                    path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
+                  response:
+                    body:
+                      bytes: "%BYTES_SENT%"
+                    duration_resp: "%RESPONSE_DURATION%"
+                    duration_tx: "%RESPONSE_TX_DURATION%"
+                    flags: "%RESPONSE_FLAGS%"
+                    headers:
+                      access-control-allow-origin: "%RESP(ACCESS-CONTROL-ALLOW-ORIGIN)%"
+                      content-length: "%RESP(CONTENT-LENGTH)%"
+                      content-type: "%RESP(CONTENT-TYPE)%"
+                      date: "%RESP(DATE)%"
+                      server: "%RESP(SERVER)%"
+                    status_code: "%RESPONSE_CODE%"
+                    status_code_details: "%RESPONSE_CODE_DETAILS%"
+                  version: "%PROTOCOL%"
           codec_type: AUTO
           generate_request_id: true
           tracing: # configuration for jaeger tracer
             provider:
-              name: envoy.tracers.dynamic_ot
+            provider:
+              name: envoy.tracers.zipkin
               typed_config:
-                "@type": type.googleapis.com/envoy.config.trace.v3.DynamicOtConfig
-                library: /usr/local/lib/libjaegertracing_plugin.so # This is a file we will need to pass to the image
-                config:
-                  service_name: front-proxy
-                  sampler:
-                    type: const
-                    param: 1
-                  reporter:
-                    localAgentHostPort: jaeger:6831
-                  headers:
-                    jaegerDebugHeader: jaeger-debug-id
-                    jaegerBaggageHeader: jaeger-baggage
-                    traceBaggageHeaderPrefix: frontctx-
-                  baggage_restrictions:
-                    denyBaggageOnInitializationFailure: false
-                    hostPort: ""
+                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
+                collector_cluster: jaeger
+                collector_endpoint: "/api/v2/spans"
+                shared_span_context: false
+                collector_endpoint_version: HTTP_JSON
           stat_prefix: ingress_https
           route_config:
             name: local_route
@@ -81,7 +135,7 @@ static_resources:
               private_key:
                 filename: "/etc/ssl/envoy/tls.key"
   clusters:
-
+  # A list of backend services we want the front proxy to route to
   - name: echo-grpc
     type: STRICT_DNS
     connect_timeout: 0.5s # The timeout for new network connections to hosts in the cluster
@@ -94,7 +148,7 @@ static_resources:
             address:
               socket_address:
                 address: echo-grpc.envoy.svc.cluster.local
-                port_value: 8081
+                port_value: 8786
     health_checks: # Optional active health checking configuration for the cluster
       timeout: 1s
       interval: 30s
@@ -135,7 +189,7 @@ static_resources:
             address:
               socket_address:
                 address: reverse-grpc.envoy.svc.cluster.local
-                port_value: 8081
+                port_value: 8786
     health_checks: # Optional active health checking configuration for the cluster
       timeout: 1s
       interval: 30s
@@ -164,3 +218,15 @@ static_resources:
         explicit_http_config:
           http2_protocol_options:
             max_concurrent_streams: 100
+  - name: jaeger
+    type: STRICT_DNS
+    lb_policy: ROUND_ROBIN
+    load_assignment:
+      cluster_name: jaeger
+      endpoints:
+      - lb_endpoints:
+        - endpoint:
+            address:
+              socket_address:
+                address: simplest-collector.envoy.svc.cluster.local
+                port_value: 9411
